tests/code/pages/errors/index-out-of-bounds.tht

$a = [1, 2, 3]
$a[10] = 'x'

